# project-step-3-andre-gnandt

./: .coverage  README.md  presentation.pptx  pyproject.toml  summary.txt  test-suite.py  test.ipynb
.github/workflows/: main.yml  run_test_suite.yml
.ipynb_checkpoints/: README-checkpoint.md  test-checkpoint.py
coverage/: .coverage
src/tourny.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tourny/analysis/.ipynb_checkpoints/: team-checkpoint.py
src/tourny/structure/: teams.py
src/tourny/visualization/.ipynb_checkpoints/: analysis-checkpoint.py
tests/: test-suite.py
tests/analysis/: TestTeam.py  TestTournament.py
tests/structure/: TestFoundation.py
tests/visualization/: TestAnalysis.py  TestTournament.py
tourny/analysis/: tournament.py
tourny/analysis/.ipynb_checkpoints/: tournament-checkpoint.py
tourny/structure/: foundation.py  teams.py
tourny/visualization/: analysis.py  tournament.py
