[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "tourny"
version = "0.0.1"
authors = [
    { name="Andre Gnandt", email="gnandtandre@outlook.com" },
    { name="Jamie Breault", email="jamiegbreault@gmail.com"}
]
description = "Tournament Simulator"
readme = "README.md"